Added a django project and connected to existing sqlite db locally

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9148c3df",
+   "id": "534a1242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1b47d52d",
+   "id": "bf076ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb756c2",
+   "id": "a493789a",
    "metadata": {},
    "source": [
     "## Get the latest sold items "
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771d70e8",
+   "id": "a2d8c27f",
    "metadata": {},
    "source": [
     "### Available Categories\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "382e4e57",
+   "id": "ec488259",
    "metadata": {},
    "source": [
     "The idea here is (ethically) retrieve data about sold items from the Poshmark ressellers website. \n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eab3444d",
+   "id": "5f67b3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "47fa96bd",
+   "id": "4b59b8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6a379d",
+   "id": "48a4b263",
    "metadata": {},
    "source": [
     "## Create the Database"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f6bac0ca",
+   "id": "3915eaa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8f3a19",
+   "id": "4d93b48c",
    "metadata": {},
    "source": [
     "## 1. Create the Table"
@@ -268,31 +268,31 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3e64eb1",
+   "id": "0e3fdec5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the table if it does not exist\n",
-    "conn = create_connection('db/sold_items.db')\n",
-    "conn.execute('''CREATE TABLE IF NOT EXISTS sold_items_women\n",
-    "         (ID TEXT PRIMARY KEY     NOT NULL,\n",
-    "         gender            TEXT    NOT NULL,\n",
-    "         category          TEXT     NOT NULL,\n",
-    "         name              CHAR(100),\n",
-    "         list_price        CHAR(10),\n",
-    "         sale_price        CHAR(10),\n",
-    "         condition         CHAR(10),\n",
-    "         link              CHAR(100),\n",
-    "         likes             CHAR(4),\n",
-    "         comments          CHAR(4),\n",
-    "         date_added        CHAR(10))\n",
-    "         ;''')\n",
-    "conn.close()"
+    "# # Create the table if it does not exist\n",
+    "# conn = create_connection('db/sold_items.db')\n",
+    "# conn.execute('''CREATE TABLE IF NOT EXISTS sold_items_women\n",
+    "#          (ID TEXT PRIMARY KEY     NOT NULL,\n",
+    "#          gender            TEXT    NOT NULL,\n",
+    "#          category          TEXT     NOT NULL,\n",
+    "#          name              CHAR(100),\n",
+    "#          list_price        CHAR(10),\n",
+    "#          sale_price        CHAR(10),\n",
+    "#          condition         CHAR(10),\n",
+    "#          link              CHAR(100),\n",
+    "#          likes             CHAR(4),\n",
+    "#          comments          CHAR(4),\n",
+    "#          date_added        CHAR(10))\n",
+    "#          ;''')\n",
+    "# conn.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1662dae8",
+   "id": "54796434",
    "metadata": {},
    "source": [
     "## 2. Insert the data into the database"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3e341a36",
+   "id": "a01cce6c",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8cc192ef",
+   "id": "e5ca0d2f",
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf63c4a4",
+   "id": "eac8e8c7",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0aa77b5",
+   "id": "73d8699b",
    "metadata": {},
    "source": [
     "- User inputs\n",
